Fixed create build page container alignment with screen issues + Centered build page

--- a/Client/src/css/buildpage.css
+++ b/Client/src/css/buildpage.css
@@ -1,7 +1,7 @@
 .buildpage-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,7 +14,7 @@
   margin: -74px 100px;
   box-shadow: inset 0 0 3em rgba(0, 0, 0, 0.1), 0 0 0 0px,
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-  padding: 20px;
+  padding: 0px 26px 0px 0px;
 }
 
 .buildpage-title {
