--- a/Client/src/css/teammatecard.css
+++ b/Client/src/css/teammatecard.css
@@ -54,7 +54,7 @@ body {
   width: 710px;
   height: 412px;
   margin-top: -118px;
-  margin-bottom: 75px;
+  margin-bottom: 150px;
   overflow: auto;
   gap: 13px 25px;
 }
@@ -70,9 +70,6 @@ body {
   width: 710px;
   height: 412px;
   margin-top: -118px;
-  margin-bottom: 75px;
-  margin-right: 10px;
-  margin-left: 10px;
   overflow: auto;
   gap: 20px 25px;
 }
@@ -102,8 +99,8 @@ body {
   margin-top: -30px;
 }
 
-@media only screen and (max-width: 1724px) {
-  .team-user {
+@media only screen and (max-width: 1682px) {
+  /* .team-user {
     border: 0px solid;
     border-radius: 10px;
     background-color: #2a1d52;
@@ -116,6 +113,7 @@ body {
     margin-top: -118px;
     margin-bottom: 155px;
     gap: 15px 25px;
+    background-color: white;
   }
 
   .team-menu {
@@ -132,7 +130,7 @@ body {
 
     overflow: auto;
     gap: 13px 20px;
-  }
+  } */
 }
 .team img:hover {
   box-shadow: inset 0 -8em 8em rgba(109, 109, 109, 0.1), 0 0 0 0px,
