--- a/Client/src/css/weaponcard.css
+++ b/Client/src/css/weaponcard.css
@@ -51,7 +51,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin-top: -48px;
+  margin-top: -50px;
   margin-bottom: 80px;
   gap: 0px 10px;
 }
@@ -67,7 +67,7 @@ body {
   flex-wrap: wrap;
   margin-top: -50px;
   margin-bottom: 45px;
-  margin-right: -20px;
+  margin-right: 0px;
   overflow: auto;
   gap: 0px 10px;
 }
@@ -123,33 +123,4 @@ body {
   text-align: center;
   inline-size: 100px;
   margin-bottom: 20px;
-}
-
-@media only screen and (max-width: 990px) {
-  .weapon-menu {
-    border: 0px solid;
-    border-radius: 10px;
-    background-color: #2a1d52;
-    width: 710px;
-    height: 412px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: -50px;
-    margin-bottom: 45px;
-    margin-right: -2px;
-    overflow: auto;
-    gap: 10px 4px;
-  }
-  .weapon img {
-    display: block;
-    width: 106px;
-    height: 106px;
-    border: 0px solid;
-    border-radius: 10px;
-    background-color: #534981;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 0px,
-      0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-    margin-top: -60px;
-  }
 }
